--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "tailwind-variants": "^3.1.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.8",
     "vaul": "^1.1.2",
